--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/proxy.js", "use": "@vercel/node" }
+    {
+      "src": "api/proxy/[...path].js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/api/proxy/(.*)", "dest": "/api/proxy.js" }
+    {
+      "src": "/api/proxy/(.*)",
+      "dest": "/api/proxy/$1"
+    }
   ]
 }
